Add simple AI move algorithm